// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC SHA1 algorithm variant 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC SHA512 class with base64 encoding 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Webhook-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha512", encoding: "base64" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with ALPHABETICAL bodySort and BODY-only payload 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Webhook-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, signatureKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const bodyString = typeof requestBody === "string"
            ? requestBody
            : Object.keys(requestBody)
                .sort()
                .map((key) => {
                    const value = requestBody[key];
                    const values = Array.isArray(value) ? value : [value];
                    return Array.from(new Set(values))
                        .sort()
                        .map((v) => key + v)
                        .join("");
                })
                .join("");
        const payload = bodyString;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with ALPHABETICAL bodySort and NOTIFICATION_URL + BODY payload 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Webhook-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const bodyString = typeof requestBody === "string"
            ? requestBody
            : Object.keys(requestBody)
                .sort()
                .map((key) => {
                    const value = requestBody[key];
                    const values = Array.isArray(value) ? value : [value];
                    return Array.from(new Set(values))
                        .sort()
                        .map((v) => key + v)
                        .join("");
                })
                .join("");
        const payload = [notificationUrl, bodyString].join("");

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with ISO8601 timestamp format 1`] = `
"const TIMESTAMP_TOLERANCE_SECONDS = 300;

/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Extract the timestamp from the "X-Timestamp" header and pass it as the timestampHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string, timestampHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        if (timestampHeader == null || timestampHeader === "") {
            return false;
        }

        const timestampMs = new Date(timestampHeader).getTime();
        if (Number.isNaN(timestampMs)) {
            return false;
        }

        if (Math.abs(Date.now() - timestampMs) > TIMESTAMP_TOLERANCE_SECONDS * 1000) {
            return false;
        }

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with NOTIFICATION_URL payload component 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const payload = [notificationUrl, requestBody].join("|");

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with UNIX_MILLIS timestamp format 1`] = `
"const TIMESTAMP_TOLERANCE_SECONDS = 600;

/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Extract the timestamp from the "X-Timestamp" header and pass it as the timestampHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string, timestampHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        if (timestampHeader == null || timestampHeader === "") {
            return false;
        }

        const timestampValue = parseInt(timestampHeader, 10);
        if (Number.isNaN(timestampValue)) {
            return false;
        }
        const timestampMs = timestampValue;

        if (Math.abs(Date.now() - timestampMs) > TIMESTAMP_TOLERANCE_SECONDS * 1000) {
            return false;
        }

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with UNIX_SECONDS timestamp validation 1`] = `
"const TIMESTAMP_TOLERANCE_SECONDS = 300;

/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Extract the timestamp from the "X-Timestamp" header and pass it as the timestampHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string, timestampHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        if (timestampHeader == null || timestampHeader === "") {
            return false;
        }

        const timestampValue = parseInt(timestampHeader, 10);
        if (Number.isNaN(timestampValue)) {
            return false;
        }
        const timestampMs = timestampValue * 1000;

        if (Math.abs(Date.now() - timestampMs) > TIMESTAMP_TOLERANCE_SECONDS * 1000) {
            return false;
        }

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with multi-component payload format 1`] = `
"const TIMESTAMP_TOLERANCE_SECONDS = 300;

/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Extract the timestamp from the "X-Timestamp" header and pass it as the timestampHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string, messageId: string, timestampHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        if (timestampHeader == null || timestampHeader === "") {
            return false;
        }

        const timestampValue = parseInt(timestampHeader, 10);
        if (Number.isNaN(timestampValue)) {
            return false;
        }
        const timestampMs = timestampValue * 1000;

        if (Math.abs(Date.now() - timestampMs) > TIMESTAMP_TOLERANCE_SECONDS * 1000) {
            return false;
        }

        const payload = [messageId, timestampHeader, requestBody].join(".");

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes HMAC class with signature prefix 1`] = `
"const SIGNATURE_PREFIX = "sha256=";

/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const sig = signatureHeader.startsWith(SIGNATURE_PREFIX)
            ? signatureHeader.slice(SIGNATURE_PREFIX.length)
            : signatureHeader;

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(sig, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > HMAC verification > writes basic HMAC SHA256 class with hex encoding 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const payload = requestBody;

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha256", encoding: "hex" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric RSA_SHA256 class with static key 1`] = `
"/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, publicKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || publicKey == null) {
            return false;
        }

        const payload = requestBody;

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: publicKey, algorithm: "RSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with ALPHABETICAL bodySort 1`] = `
"/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, publicKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || publicKey == null) {
            return false;
        }

        const bodyString = typeof requestBody === "string"
            ? requestBody
            : Object.keys(requestBody)
                .sort()
                .map((key) => {
                    const value = requestBody[key];
                    const values = Array.isArray(value) ? value : [value];
                    return Array.from(new Set(values))
                        .sort()
                        .map((v) => key + v)
                        .join("");
                })
                .join("");
        const payload = bodyString;

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: publicKey, algorithm: "RSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with BODY-only payload format 1`] = `
"/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, publicKey: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || publicKey == null) {
            return false;
        }

        const payload = requestBody;

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: publicKey, algorithm: "RSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with JWKS key source 1`] = `
"/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Public keys are fetched from the JWKS endpoint at https://example.com/.well-known/jwks.json.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null) {
            return false;
        }

        const payload = requestBody;

        const resolvedKey = await await webhookCrypto.fetchJwks({ url: "https://example.com/.well-known/jwks.json" });

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: resolvedKey, algorithm: "RSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with JWKS key source and keyIdHeader 1`] = `
"/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Public keys are fetched from the JWKS endpoint at https://example.com/.well-known/jwks.json.
 * Extract the key ID from the "X-Key-Id" header and pass it as the keyIdHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, keyIdHeader: string | undefined): Promise<boolean> {
        if (requestBody == null || signatureHeader == null) {
            return false;
        }

        const payload = requestBody;

        const resolvedKey = await await webhookCrypto.fetchJwks({ url: "https://example.com/.well-known/jwks.json", keyId: keyIdHeader });

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: resolvedKey, algorithm: "RSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with NOTIFICATION_URL payload component 1`] = `
"/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Public keys are fetched from the JWKS endpoint at https://example.com/.well-known/jwks.json.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null) {
            return false;
        }

        const payload = [notificationUrl, requestBody].join("|");

        const resolvedKey = await await webhookCrypto.fetchJwks({ url: "https://example.com/.well-known/jwks.json" });

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: resolvedKey, algorithm: "ECDSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with multi-component payload format including TIMESTAMP 1`] = `
"const TIMESTAMP_TOLERANCE_SECONDS = 300;

/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Extract the timestamp from the "X-Timestamp" header and pass it as the timestampHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, publicKey: string, messageId: string, timestampHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || publicKey == null) {
            return false;
        }

        if (timestampHeader == null || timestampHeader === "") {
            return false;
        }

        const timestampValue = parseInt(timestampHeader, 10);
        if (Number.isNaN(timestampValue)) {
            return false;
        }
        const timestampMs = timestampValue * 1000;

        if (Math.abs(Date.now() - timestampMs) > TIMESTAMP_TOLERANCE_SECONDS * 1000) {
            return false;
        }

        const payload = [messageId, timestampHeader, requestBody].join(".");

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: signatureHeader, publicKey: publicKey, algorithm: "RSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > asymmetric verification > writes asymmetric class with timestamp validation 1`] = `
"const TIMESTAMP_TOLERANCE_SECONDS = 300;
const SIGNATURE_PREFIX = "v1=";

/**
 * Verify an asymmetric webhook signature.
 *
 * Extract the signature from the "X-Signature" header and pass it as the signatureHeader parameter.
 * Extract the timestamp from the "X-Timestamp" header and pass it as the timestampHeader parameter.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, publicKey: string, timestampHeader: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || publicKey == null) {
            return false;
        }

        if (timestampHeader == null || timestampHeader === "") {
            return false;
        }

        const timestampValue = parseInt(timestampHeader, 10);
        if (Number.isNaN(timestampValue)) {
            return false;
        }
        const timestampMs = timestampValue * 1000;

        if (Math.abs(Date.now() - timestampMs) > TIMESTAMP_TOLERANCE_SECONDS * 1000) {
            return false;
        }

        const sig = signatureHeader.startsWith(SIGNATURE_PREFIX)
            ? signatureHeader.slice(SIGNATURE_PREFIX.length)
            : signatureHeader;

        const payload = requestBody;

        return await webhookCrypto.verifyAsymmetricSignature({ payload: payload, signature: sig, publicKey: publicKey, algorithm: "ECDSA_SHA256", encoding: "base64" });
    }
}
"
`;

exports[`WebhooksHelperGenerator > body-hash binding > computes a body hash and compares it to the transmitted query parameter before HMAC 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Twilio-Signature" header and pass it as the signatureHeader parameter.
 * This helper verifies both classic form-encoded and JSON requests: it branches at runtime on whether the body-hash query parameter is present on the notification URL.
 * For a JSON request the raw body is verified against that separately-transmitted hash and the signature is checked over the notification URL only.
 * Pass the exact raw body as requestBody and the verbatim notification URL as notificationUrl.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const transmittedBodyHash = webhookCrypto.getWebhookQueryParameter(notificationUrl, "bodySHA256");
        let payload: string;
        if (transmittedBodyHash != null) {
            const expectedBodyHash = await webhookCrypto.computeHash({ payload: requestBody, algorithm: "sha256", encoding: "hex" });
            if (!(await webhookCrypto.timingSafeEqual(expectedBodyHash, transmittedBodyHash))) {
                return false;
            }
            payload = notificationUrl;
        } else {
            payload = notificationUrl;
        }

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > multi-value form parameters > emits sorted(unique(keys)) with per-key sorted(unique(values)) assembly 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Webhook-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const bodyString = typeof requestBody === "string"
            ? requestBody
            : Object.keys(requestBody)
                .sort()
                .map((key) => {
                    const value = requestBody[key];
                    const values = Array.isArray(value) ? value : [value];
                    return Array.from(new Set(values))
                        .sort()
                        .map((v) => key + v)
                        .join("");
                })
                .join("");
        const payload = [notificationUrl, bodyString].join("");

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;

exports[`WebhooksHelperGenerator > notification-URL normalization > loops over candidate URLs without a body-hash check when only normalization is set 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Twilio-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 * The signature is verified against several normalized forms of the notification URL, succeeding if any candidate matches.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const bodyString = typeof requestBody === "string"
            ? requestBody
            : Object.keys(requestBody)
                .sort()
                .map((key) => {
                    const value = requestBody[key];
                    const values = Array.isArray(value) ? value : [value];
                    return Array.from(new Set(values))
                        .sort()
                        .map((v) => key + v)
                        .join("");
                })
                .join("");
        const candidates = webhookCrypto.notificationUrlCandidates(notificationUrl, { portVariants: true, legacyQueryEncoding: false });
        for (const candidateUrl of candidates) {
            const payload = [candidateUrl, bodyString].join("");
            const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });
            if (await webhookCrypto.timingSafeEqual(signatureHeader, expected)) {
                return true;
            }
        }
        return false;
    }
}
"
`;

exports[`WebhooksHelperGenerator > notification-URL normalization > verifies against candidate URLs and combines with the body-hash branch 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Twilio-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 * This helper verifies both classic form-encoded and JSON requests: it branches at runtime on whether the body-hash query parameter is present on the notification URL.
 * For a JSON request the raw body is verified against that separately-transmitted hash and the signature is checked over the notification URL only.
 * Pass the exact raw body as requestBody and the verbatim notification URL as notificationUrl.
 * The signature is verified against several normalized forms of the notification URL, succeeding if any candidate matches.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const transmittedBodyHash = webhookCrypto.getWebhookQueryParameter(notificationUrl, "bodySHA256");
        if (transmittedBodyHash != null) {
            const expectedBodyHash = await webhookCrypto.computeHash({ payload: requestBody as string, algorithm: "sha256", encoding: "hex" });
            if (!(await webhookCrypto.timingSafeEqual(expectedBodyHash, transmittedBodyHash))) {
                return false;
            }
        }
        const bodyString = typeof requestBody === "string"
            ? requestBody
            : Object.keys(requestBody)
                .sort()
                .map((key) => {
                    const value = requestBody[key];
                    const values = Array.isArray(value) ? value : [value];
                    return Array.from(new Set(values))
                        .sort()
                        .map((v) => key + v)
                        .join("");
                })
                .join("");
        const candidates = webhookCrypto.notificationUrlCandidates(notificationUrl, { portVariants: true, legacyQueryEncoding: true });
        for (const candidateUrl of candidates) {
            const payload = transmittedBodyHash != null ? candidateUrl : [candidateUrl, bodyString].join("");
            const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });
            if (await webhookCrypto.timingSafeEqual(signatureHeader, expected)) {
                return true;
            }
        }
        return false;
    }
}
"
`;

exports[`WebhooksHelperGenerator > runtime body-hash branch > branches on the body-hash query parameter: JSON signs the URL only, form signs URL + params 1`] = `
"/**
 * Verify an HMAC webhook signature.
 *
 * Extract the signature from the "X-Twilio-Signature" header and pass it as the signatureHeader parameter.
 * The requestBody parameter accepts either a raw string or a Record<string, string | string[]> of POST body parameters.
 * When a Record is provided, keys are sorted and each key's values are deduped and sorted, then concatenated as key-value pairs before signing.
 * This helper verifies both classic form-encoded and JSON requests: it branches at runtime on whether the body-hash query parameter is present on the notification URL.
 * For a JSON request the raw body is verified against that separately-transmitted hash and the signature is checked over the notification URL only.
 * Pass the exact raw body as requestBody and the verbatim notification URL as notificationUrl.
 */
export class WebhooksHelper {
    public static async verifySignature(requestBody: string | Record<string, string | string[]>, signatureHeader: string, signatureKey: string, notificationUrl: string): Promise<boolean> {
        if (requestBody == null || signatureHeader == null || signatureKey == null) {
            return false;
        }

        const transmittedBodyHash = webhookCrypto.getWebhookQueryParameter(notificationUrl, "bodySHA256");
        let payload: string;
        if (transmittedBodyHash != null) {
            const expectedBodyHash = await webhookCrypto.computeHash({ payload: requestBody as string, algorithm: "sha256", encoding: "hex" });
            if (!(await webhookCrypto.timingSafeEqual(expectedBodyHash, transmittedBodyHash))) {
                return false;
            }
            payload = notificationUrl;
        } else {
            const bodyString = typeof requestBody === "string"
                ? requestBody
                : Object.keys(requestBody)
                    .sort()
                    .map((key) => {
                        const value = requestBody[key];
                        const values = Array.isArray(value) ? value : [value];
                        return Array.from(new Set(values))
                            .sort()
                            .map((v) => key + v)
                            .join("");
                    })
                    .join("");
            payload = [notificationUrl, bodyString].join("");
        }

        const expected = await webhookCrypto.computeHmacSignature({ payload: payload, secret: signatureKey, algorithm: "sha1", encoding: "base64" });

        return await webhookCrypto.timingSafeEqual(signatureHeader, expected);
    }
}
"
`;
